// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
BusinessAdministrator: A table for business administrators who manage the system.
Dog: A table that stores information about dogs owned by registered owners.
Owner: A table that stores registered dog owners and their personal information.
Payment: A table that records payments made by owners after a walk.
Walk: A table that stores confirmed walks, linking walkers and dogs.
Walker: A table that stores registered dog walkers and their personal information.
Review: A table that allows owners to leave reviews for walkers after the walk.
Role: A table to maintain roles for different user types.
SystemLog: A table for logging system events and actions.
UserRole: A table to associate users with their respective roles.
WalkRequest: A table to handle walk requests for dogs, connecting owners and walkers.
WalkerAvailability: A table to store availability of walkers on different days and times.
WalkerRate: A table that indicates the walking rate for different dog sizes set by walkers.
'''
}

Table BusinessAdministrator {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Dog {
    id INTEGER [primary key]
    owner_id INTEGER 
    name VARCHAR 
    breed VARCHAR 
    size VARCHAR 
    notes VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Owner {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Payment {
    id INTEGER [primary key]
    walk_id INTEGER 
    owner_id INTEGER 
    walker_id INTEGER 
    amount FLOAT 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Walk {
    id INTEGER [primary key]
    walk_request_id INTEGER 
    walker_id INTEGER 
    dog_id INTEGER 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Walker {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    postal_code VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    max_dogs_per_walk INTEGER 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Review {
    id INTEGER [primary key]
    walk_id INTEGER 
    owner_id INTEGER 
    walker_id INTEGER 
    review_text VARCHAR 
    rating INTEGER 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Role {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table SystemLog {
    id INTEGER [primary key]
    event VARCHAR 
    event_date DATETIME 
    user_id INTEGER 
    created_by VARCHAR 
    }

Table UserRole {
    id INTEGER [primary key]
    user_id INTEGER 
    role_id INTEGER 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkRequest {
    id INTEGER [primary key]
    owner_id INTEGER 
    walker_id INTEGER 
    day_of_week VARCHAR 
    time_of_day VARCHAR 
    status VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkerAvailability {
    id INTEGER [primary key]
    walker_id INTEGER 
    day_of_week VARCHAR 
    time_of_day VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkerRate {
    id INTEGER [primary key]
    walker_id INTEGER 
    size VARCHAR 
    rate FLOAT 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }



// Relationships
    Ref: Dog.(owner_id) < Owner.(id)
    Ref: Payment.(owner_id) < Owner.(id)
    Ref: Payment.(walk_id) < Walk.(id)
    Ref: Payment.(walker_id) < Walker.(id)
    Ref: Walk.(dog_id) < Dog.(id)
    Ref: Walk.(walk_request_id) < WalkRequest.(id)
    Ref: Walk.(walker_id) < Walker.(id)
    Ref: Review.(owner_id) < Owner.(id)
    Ref: Review.(walk_id) < Walk.(id)
    Ref: Review.(walker_id) < Walker.(id)
    Ref: UserRole.(role_id) < Role.(id)
    Ref: WalkRequest.(owner_id) < Owner.(id)
    Ref: WalkRequest.(walker_id) < Walker.(id)
    Ref: WalkerAvailability.(walker_id) < Walker.(id)
    Ref: WalkerRate.(walker_id) < Walker.(id)
